--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         android:theme="@style/Theme.ProyectoCompartido"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity android:name=".Scanner" />
         <activity
             android:name=".Medicinas"
             android:exported="false" />
