--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" />
-
-    <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" />
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <queries>
         <intent>
@@ -34,6 +33,9 @@
         android:theme="@style/Theme.ProyectoCompartido"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".AdministrarMedicina"
+            android:exported="false" />
         <activity android:name=".Scanner" />
         <activity
             android:name=".Medicinas"
@@ -55,10 +57,10 @@
 
             <meta-data
                 android:name="android.nfc.action.TECH_DISCOVERED"
-                android:resource="@xml/nfc_tech_filter"/>
+                android:resource="@xml/nfc_tech_filter" />
             <meta-data
                 android:name="com.google.mlkit.vision.DEPENDENCIES"
-                android:value="barcode_ui"/>
+                android:value="barcode_ui" />
         </activity>
     </application>
 
