--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:name="android.hardware.nfc"
         android:required="true" />
     <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
+    <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
@@ -33,6 +36,9 @@
         android:theme="@style/Theme.ProyectoCompartido"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".Addtubo"
+            android:exported="false" />
         <activity
             android:name=".AdministrarMedicina"
             android:exported="false" />
